k8s/shadow/shadow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-shadow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-shadow
  template:
    metadata:
      labels:
        app: aceest-shadow
    spec:
      containers:
      - name: aceest
        image: krishnakumar2022us70010/aceest-fitness:v2.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-shadow-svc
spec:
  selector:
    app: aceest-shadow
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
