k8s/shadow/shadow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-shadow-ingress
  annotations:
    nginx.ingress.kubernetes.io/mirror-uri: "/"
    nginx.ingress.kubernetes.io/mirror-backend-service: aceest-shadow-svc
spec:
  ingressClassName: nginx
  rules:
  - host: aceest.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aceest-fitness-service
            port:
              number: 80
